--- a/Phase 1/sample.html
+++ b/Phase 1/sample.html
@@ -3,7 +3,9 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
     <script type="text/javascript" src="../js/jsPlumb-2.1.2.js"></script>
-    <script type="text/javascript" src="./sample.js"></script>
+    <script type="text/javascript" src="sample.js"></script>
+    <script type="text/javascript" src="optimization_code.js"></script>
+
     <link rel="stylesheet" type="text/css" href="sample.css">
 
     <title>Getting started with jsPlumb</title>
@@ -13,5 +15,5 @@
     <div id="container">
     </div>
   </body>
-  
+
 </html>
