Added some zoom CSS changing code to a new helper library

--- a/Phase 1/sample.html
+++ b/Phase 1/sample.html
@@ -4,6 +4,7 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
     <script type="text/javascript" src="../js/jsPlumb-2.1.2.js"></script>
     <script type="text/javascript" src="sample.js"></script>
+    <script type="text/javascript" src="helper.js"></script>
     <script type="text/javascript" src="optimization_code.js"></script>
 
     <link rel="stylesheet" type="text/css" href="sample.css">
