--- a/Phase 1/sample.html
+++ b/Phase 1/sample.html
@@ -15,6 +15,10 @@
   <body>
     <div id="container">
     </div>
+    <div style="text-align:center">
+	<button type="button" onclick="incrementZoom(0.1)">Zoom +</button>
+	<button type="button" onclick="incrementZoom(-0.1)">Zoom -</button>
+    <div>
   </body>
 
 </html>
