Zoom works but overflow is a problem because it covers the zoom control buttons...

--- a/Phase 1/sample.html
+++ b/Phase 1/sample.html
@@ -13,9 +13,11 @@
   </head>  
 
   <body>
-    <div id="container">
+    <div id="main_box">
+        <div id="container">
+        </div>
     </div>
-    <div style="text-align:center">
+    <div style="text-align:left">
 	<button type="button" onclick="incrementZoom(0.1)">Zoom +</button>
 	<button type="button" onclick="incrementZoom(-0.1)">Zoom -</button>
     <div>
