--- a/Phase 1/sample.html
+++ b/Phase 1/sample.html
@@ -17,7 +17,7 @@
         <div id="container">
         </div>
     </div>
-    <div style="text-align:left;position:absolute">
+    <div style="text-align:center;position:absolute">
 	<button type="button" onclick="incrementZoom(0.1)">Zoom +</button>
 	<button type="button" onclick="incrementZoom(-0.1)">Zoom -</button>
     <div>
