--- a/Phase 2/index.html
+++ b/Phase 2/index.html
@@ -10,7 +10,7 @@
   <body onload="start(maincanvas)">
     <div id="main_box">
       <div id="container">
-        <canvas id="maincanvas"></canvas>
+        <canvas id="maincanvas" width="640px" height="480px"></canvas>
       </div>
     </div>
     <div style="text-align:center;position:absolute">
