Minor issue fixed

--- a/Phase 2/index.html
+++ b/Phase 2/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
-  <body onload="start(maincanvas)">
+  <body onload="start('maincanvas')">
     <div id="main_box">
       <div id="container">
         <canvas id="maincanvas" width="640px" height="480px"></canvas>
