--- a/Phase 2/index.html
+++ b/Phase 2/index.html
@@ -20,6 +20,7 @@
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.25/paper-full.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="zoom_fxn.js"></script>
     <script type="text/javascript" src="optimization_code.js"></script>
