--- a/Phase 2/test_collisions.html
+++ b/Phase 2/test_collisions.html
@@ -10,23 +10,34 @@
   <body>
     <div style="text-align: center; max-width: 640px;">
     <h1>This is a testing suite for collisions.</h1>
+    <p>Please note that all visuals are SVG and are NOT generated automatically</p>
     <ul style="text-align: left;">
-      <li><a href="#id_1">Node to Node</a></li>
+      <li><a href="#id_1">Node to Node (No collisions)</a></li>
+      <li><a href="#id_6">Node to Node (Direct collisions)</a></li>
+      <li>Node to Node (Edge cases)</li>
       <li>Node to Edge</li>
       <li>Edge to Edge</li>
     </ul>
     <h2>Summary</h2>
     <p>Green is good, Red is bad</p>
     <ul style="text-align: left;">
-      <li>Node to Node: <span id="res_1">1</span><span id="res_2">2</span><span id="res_3">3</span></li>
+      <li>Node to Node (No collisions): <span id="res_1">1</span> <span id="res_2">2</span> <span id="res_3">3</span> <span id="res_4">4</span> <span id="res_5">5</span></li>
+      <li>Node to Node (Direct collisions): <span id="res_6">6</span></li>
+      <li>Node to Node (Edge cases): </li>
+      <li>Node to Edge: </li>
+      <li>Edge to Edge: </li>
     </ul>
 
     <h3 id="id_1">1</h3>
     <svg xmlns="http://www.w3.org/2000/svg" 
 	    width="480" height="320" version="1.1">
     	<rect x="0" y="0" width="480" height="320" fill="white" stroke="black" stroke-width="2"></rect>
-    	<rect x="64" y="64" width="64" height="64" fill="white" stroke="blue" stroke-width="2"></rect>
-    	<rect x="352" y="192" width="64" height="64" fill="white" stroke="blue" stroke-width="2"></rect>
+    	<rect x="64" y="64" width="64" height="64" fill="none" stroke="blue" stroke-width="2"></rect>
+	<text x="96" y="96" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">1</text>
+    	<rect x="352" y="192" width="64" height="64" fill="none" stroke="blue" stroke-width="2"></rect>
+	<text x="384" y="224" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">2</text>
     </svg>
     <pre class="prettyprint" style="text-align: left;"><code>    var node1_1 = {"x": 64, "y": 64, "width": 64, "totalheight": 64};
     var node1_2 = {"x": 352, "y": 192, "width": 64, "totalheight": 64};
@@ -38,8 +49,12 @@
     <svg xmlns="http://www.w3.org/2000/svg" 
 	    width="480" height="320" version="1.1">
     	<rect x="0" y="0" width="480" height="320" fill="white" stroke="black" stroke-width="2"></rect>
-    	<rect x="64" y="64" width="64" height="64" fill="white" stroke="blue" stroke-width="2"></rect>
-    	<rect x="64" y="192" width="64" height="64" fill="white" stroke="blue" stroke-width="2"></rect>
+    	<rect x="64" y="64" width="64" height="64" fill="none" stroke="blue" stroke-width="2"></rect>
+	<text x="96" y="96" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">1</text>
+    	<rect x="64" y="192" width="64" height="64" fill="none" stroke="blue" stroke-width="2"></rect>
+	<text x="96" y="224" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">2</text>
     </svg>
     <pre class="prettyprint" style="text-align: left;"><code>    var node2_1 = {"x": 64, "y": 64, "width": 64, "totalheight": 64};
     var node2_2 = {"x": 64, "y": 64, "width": 64, "totalheight": 64};
@@ -51,14 +66,86 @@
     <svg xmlns="http://www.w3.org/2000/svg" 
 	    width="480" height="320" version="1.1">
     	<rect x="0" y="0" width="480" height="320" fill="white" stroke="black" stroke-width="2"></rect>
-    	<rect x="64" y="64" width="64" height="64" fill="white" stroke="blue" stroke-width="2"></rect>
-    	<rect x="352" y="64" width="64" height="64" fill="white" stroke="blue" stroke-width="2"></rect>
+    	<rect x="64" y="64" width="64" height="64" fill="none" stroke="blue" stroke-width="2"></rect>
+	<text x="96" y="96" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">1</text>
+    	<rect x="352" y="64" width="64" height="64" fill="none" stroke="blue" stroke-width="2"></rect>
+	<text x="384" y="96" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">2</text>
     </svg>
     <pre class="prettyprint" style="text-align: left;"><code>    var node3_1 = {"x": 64, "y": 64, "width": 64, "totalheight": 64};
     var node3_2 = {"x": 352, "y": 64, "width": 64, "totalheight": 64};
     return isCollidingNN(node3_1, node3_2);</code></pre>
     <p>Expected: <span style="color: blue">FALSE</span>
     <p id="test_3"></p>
+
+    <h3 id="id_4">4</h3>
+    <svg xmlns="http://www.w3.org/2000/svg" 
+	    width="480" height="320" version="1.1">
+    	<rect x="0" y="0" width="480" height="320" fill="white" stroke="black" stroke-width="2"></rect>
+    	<rect x="256" y="64" width="64" height="64" fill="none" stroke="blue" stroke-width="2"></rect>
+	<text x="288" y="96" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">1</text>
+    	<rect x="160" y="64" width="64" height="64" fill="none" stroke="blue" stroke-width="2"></rect>
+	<text x="192" y="96" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">2</text>
+    </svg>
+    <pre class="prettyprint" style="text-align: left;"><code>    var node4_1 = {"x": 256, "y": 64, "width": 64, "totalheight": 64};
+    var node4_2 = {"x": 160, "y": 64, "width": 64, "totalheight": 64};
+    return isCollidingNN(node4_1, node4_2);</code></pre>
+    <p>Expected: <span style="color: blue">FALSE</span>
+    <p id="test_4"></p>
+
+    <h3 id="id_5">5</h3>
+    <svg xmlns="http://www.w3.org/2000/svg" 
+	    width="480" height="320" version="1.1">
+    	<rect x="0" y="0" width="480" height="320" fill="white" stroke="black" stroke-width="2"></rect>
+    	<rect x="64" y="64" width="64" height="128" fill="none" stroke="blue" stroke-width="2"></rect>
+	<text x="96" y="128" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">1</text>
+    	<rect x="352" y="96" width="64" height="64" fill="none" stroke="blue" stroke-width="2"></rect>
+	<text x="384" y="128" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">2</text>
+    </svg>
+    <pre class="prettyprint" style="text-align: left;"><code>    var node5_1 = {"x": 64, "y": 64, "width": 64, "totalheight": 128};
+    var node5_2 = {"x": 352, "y": 96, "width": 64, "totalheight": 64};
+    return isCollidingNN(node5_1, node5_2);</code></pre>
+    <p>Expected: <span style="color: blue">FALSE</span>
+    <p id="test_5"></p>
+
+    <h3 id="id_6">6</h3>
+    <svg xmlns="http://www.w3.org/2000/svg" 
+	    width="480" height="320" version="1.1">
+    	<rect x="0" y="0" width="480" height="320" fill="white" stroke="black" stroke-width="2"></rect>
+    	<rect x="64" y="64" width="128" height="128" fill="none" stroke="red" stroke-width="2"></rect>
+	<text x="96" y="128" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">1</text>
+    	<rect x="128" y="96" width="128" height="128" fill="none" stroke="red" stroke-width="2"></rect>
+	<text x="224" y="160" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">2</text>
+    </svg>
+    <pre class="prettyprint" style="text-align: left;"><code>    var node6_1 = {"x": 64, "y": 64, "width": 128, "totalheight": 128};
+    var node6_2 = {"x": 128, "y": 96, "width": 128, "totalheight": 128};
+    return isCollidingNN(node6_1, node6_2);</code></pre>
+    <p>Expected: <span style="color: blue">TRUE</span>
+    <p id="test_6"></p>
+
+    <h3 id="id_7">7</h3>
+    <svg xmlns="http://www.w3.org/2000/svg" 
+	    width="480" height="320" version="1.1">
+    	<rect x="0" y="0" width="480" height="320" fill="white" stroke="black" stroke-width="2"></rect>
+    	<rect x="64" y="128" width="128" height="128" fill="none" stroke="red" stroke-width="2"></rect>
+	<text x="96" y="192" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">1</text>
+    	<rect x="128" y="96" width="128" height="128" fill="none" stroke="red" stroke-width="2"></rect>
+	<text x="224" y="160" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">2</text>
+    </svg>
+    <pre class="prettyprint" style="text-align: left;"><code>    var node7_1 = {"x": 64, "y": 128, "width": 128, "totalheight": 128};
+    var node7_2 = {"x": 128, "y": 96, "width": 128, "totalheight": 128};
+    return isCollidingNN(node7_1, node7_2);</code></pre>
+    <p>Expected: <span style="color: blue">TRUE</span>
+    <p id="test_7"></p>
 
     <p>Suite made by Andrew Fan</p>
     </div>
