Finished more node to node edge cases

--- a/Phase 2/test_collisions.html
+++ b/Phase 2/test_collisions.html
@@ -23,7 +23,7 @@
     <ul style="text-align: left;">
       <li>Node to Node (No collisions): <span id="res_1">1</span> <span id="res_2">2</span> <span id="res_3">3</span> <span id="res_4">4</span> <span id="res_5">5</span></li>
       <li>Node to Node (Direct collisions): <span id="res_6">6</span> <span id="res_7">7</span> <span id="res_8">8</span> <span id="res_9">9</span> <span id="res_10">10</span> <span id="res_11">11</span> <span id="res_12">12</span> <span id="res_13">13</span> <span id="res_14">14</span> <span id="res_15">15</span></li>
-      <li>Node to Node (Edge cases): <span id="res_16">16</span> <span id="res_17">17</span> <span id="res_18">18</span></li>
+      <li>Node to Node (Edge cases): <span id="res_16">16</span> <span id="res_17">17</span> <span id="res_18">18</span> <span id="res_19">19</span> <span id="res_20">20</span> <span id="res_21">21</span> <span id="res_22">22</span></li>
       <li>Node to Edge: </li>
       <li>Edge to Edge: </li>
     </ul>
@@ -361,6 +361,74 @@
            isCollidingNN(node18_1, node18_4) || isCollidingNN(node18_1, node18_5);</code></pre>
     <p>Expected: <span style="color: blue">FALSE</span>
     <p id="test_18"></p>
+
+    <h3 id="id_19">19</h3>
+    <svg xmlns="http://www.w3.org/2000/svg" 
+	    width="480" height="320" version="1.1">
+    	<rect x="0" y="0" width="480" height="320" fill="white" stroke="black" stroke-width="2"></rect>
+    	<rect x="176" y="96" width="128" height="128" fill="none" stroke="red" stroke-width="2"></rect>
+	<text x="240" y="128" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">1</text>
+    	<rect x="208" y="160" width="64" height="64" fill="none" stroke="red" stroke-width="2"></rect>
+	<text x="240" y="192" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">2</text>
+    </svg>
+    <pre class="prettyprint" style="text-align: left;"><code>    var node19_1 = {"x": 176, "y": 96, "width": 128, "totalheight": 128};
+    var node19_2 = {"x": 208, "y": 160, "width": 64, "totalheight": 64};
+    return isCollidingNN(node19_1, node19_2);</code></pre>
+    <p>Expected: <span style="color: blue">TRUE</span>
+    <p id="test_19"></p>
+
+    <h3 id="id_20">20</h3>
+    <svg xmlns="http://www.w3.org/2000/svg" 
+	    width="480" height="320" version="1.1">
+    	<rect x="0" y="0" width="480" height="320" fill="white" stroke="black" stroke-width="2"></rect>
+    	<rect x="176" y="96" width="128" height="128" fill="none" stroke="red" stroke-width="2"></rect>
+	<text x="240" y="192" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">1</text>
+    	<rect x="208" y="96" width="64" height="64" fill="none" stroke="red" stroke-width="2"></rect>
+	<text x="240" y="128" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">2</text>
+    </svg>
+    <pre class="prettyprint" style="text-align: left;"><code>    var node20_1 = {"x": 176, "y": 96, "width": 128, "totalheight": 128};
+    var node20_2 = {"x": 208, "y": 96, "width": 64, "totalheight": 64};
+    return isCollidingNN(node20_1, node20_2);</code></pre>
+    <p>Expected: <span style="color: blue">TRUE</span>
+    <p id="test_20"></p>
+
+    <h3 id="id_21">21</h3>
+    <svg xmlns="http://www.w3.org/2000/svg" 
+	    width="480" height="320" version="1.1">
+    	<rect x="0" y="0" width="480" height="320" fill="white" stroke="black" stroke-width="2"></rect>
+    	<rect x="176" y="96" width="128" height="128" fill="none" stroke="red" stroke-width="2"></rect>
+	<text x="272" y="160" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">1</text>
+    	<rect x="176" y="128" width="64" height="64" fill="none" stroke="red" stroke-width="2"></rect>
+	<text x="208" y="160" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">2</text>
+    </svg>
+    <pre class="prettyprint" style="text-align: left;"><code>    var node21_1 = {"x": 176, "y": 96, "width": 128, "totalheight": 128};
+    var node21_2 = {"x": 176, "y": 128, "width": 64, "totalheight": 64};
+    return isCollidingNN(node21_1, node21_2);</code></pre>
+    <p>Expected: <span style="color: blue">TRUE</span>
+    <p id="test_21"></p>
+
+    <h3 id="id_22">22</h3>
+    <svg xmlns="http://www.w3.org/2000/svg" 
+	    width="480" height="320" version="1.1">
+    	<rect x="0" y="0" width="480" height="320" fill="white" stroke="black" stroke-width="2"></rect>
+    	<rect x="176" y="96" width="128" height="128" fill="none" stroke="red" stroke-width="2"></rect>
+	<text x="208" y="160" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">1</text>
+    	<rect x="240" y="128" width="64" height="64" fill="none" stroke="red" stroke-width="2"></rect>
+	<text x="272" y="160" font-family="Andale Mono, monospace" font-size="16px" fill="black"
+          text-anchor="middle" dominant-baseline="central">2</text>
+    </svg>
+    <pre class="prettyprint" style="text-align: left;"><code>    var node22_1 = {"x": 176, "y": 96, "width": 128, "totalheight": 128};
+    var node22_2 = {"x": 240, "y": 128, "width": 64, "totalheight": 64};
+    return isCollidingNN(node22_1, node22_2);</code></pre>
+    <p>Expected: <span style="color: blue">TRUE</span>
+    <p id="test_22"></p>
 
     <p>Suite made by Andrew Fan</p>
     </div>
