Almost done opti-shuffling but code is re-run at the end
need problem solving

--- a/Phase 2/index.html
+++ b/Phase 2/index.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="optimization_code.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="zoom_fxn.js"></script>
-    <button type="button" style="float:right;" onclick="initializeNodes()">Shuffle Network</button>
+    <button type="button" style="float:right;" onclick="shuffleNetwork()">Shuffle Network</button>
   </body>
 
 </html>
